--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -343,7 +343,11 @@
         tools:layout="@layout/fragment_start_4" >
         <action
             android:id="@+id/action_startFragment4_to_startFragment5"
-            app:destination="@id/startFragment5" />
+            app:destination="@id/startFragment5"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/startFragment5"
@@ -352,7 +356,11 @@
         tools:layout="@layout/fragment_start_5" >
         <action
             android:id="@+id/action_startFragment5_to_startFragment6"
-            app:destination="@id/startFragment6" />
+            app:destination="@id/startFragment6"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/editMedicineFragment"
@@ -414,6 +422,10 @@
         tools:layout="@layout/fragment_start_6" >
         <action
             android:id="@+id/action_startFragment6_to_mainFragment"
-            app:destination="@id/mainFragment" />
+            app:destination="@id/mainFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
 </navigation>
